--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="">
   </head>
   
-  <body>
+  <body class="vh-100">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
